--- a/ai-service/package.json
+++ b/ai-service/package.json
@@ -2,6 +2,7 @@
   "name": "ai-service",
   "version": "1.0.0",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
