--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@huggingface/transformers": "^3.8.1",
     "@radix-ui/react-select": "^2.2.6",
     "@supabase/supabase-js": "^2.78.0",
     "@tailwindcss/vite": "^4.1.15",
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.12.2",
     "lucide": "^0.562.0",
     "lucide-react": "^0.561.0",
