--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -7,3 +7,7 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+  # Ignore other folders during build
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
